<resources>
    <string name="app_name">Villages Sydney</string>
    <string name="action_home">HOME</string>
    <string name="action_login">LOGIN</string>
    <string name="action_register">REGISTER</string>
    <string name="action_update">UPDATE PROFILE</string>
    <string name="action_logout">LOG OUT</string>
    <string name="yesBtn">Yes, please</string>
    <string name="noBtn">No, thank you</string>
    <string name="noOfNoti">noOfNoti</string>
    <string name="OpeningDialogBox">Opening Dialog Box</string>
    <string name="DialogBoxOpened">Opened A Dialog Box</string>
    <string name="NotificationSetting">NotificationSetting</string>
</resources>
